--- a/src/app/components/products-list/products-list.component.scss
+++ b/src/app/components/products-list/products-list.component.scss
@@ -15,6 +15,9 @@
     overflow-y: auto;
 
     .header-wrapper {
+      position: sticky;
+      top: 0;
+      z-index: 999;
       width: 100%;
       display: -webkit-box;
       display: flex;
@@ -123,7 +126,13 @@
 
       &.selected {
         background: $listBackground;
-
+        .mat-icon{
+          color: #fff !important;
+          width: 0;
+          background: transparent;
+          box-shadow: none;
+          border:0
+        }
         span {
           color: #fff !important;
         }
