--- a/src/app/components/product-detail/product-detail.component.scss
+++ b/src/app/components/product-detail/product-detail.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   max-width: 600px;
   width: 100%;
-  margin: 109px auto;
+  margin: 0 auto;
   background: #40798C;
   padding: 10px 20px;
   -webkit-box-shadow: 0 2px 10px -2px rgba(0,0,0,0.75);
