--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="list-wrapper" id="ulElement">
       <ul *ngIf="products.length> 0;else noData" >
-        <li class="products-list"  *ngFor="let product of products  | search: searchText |paginate:{itemsPerPage:5,totalItems: products.length,currentPage: p} ;let i=index"
+        <li class="products-list"  *ngFor="let product of products  | search: searchText  ;let i=index"
             [ngClass]="{'selected': index === i}"  (click)="onSelectProduct(product)" >
           <div class="product-list-details">
             <div class="product-thumbnail">
@@ -69,12 +69,15 @@
       </ul>
 
       <ng-template #noData>
-        <h3 class="no-data">No data to display</h3>
+        <div class="no-data">
+          <h3 >No data to display</h3>
+          <mat-spinner [diameter]="50"></mat-spinner>
+        </div>
       </ng-template>
     </div>
-    <div class="pagination">
-      <pagination-controls (pageChange)="p = $event" class="ngx-pagination"></pagination-controls>
-    </div>
+<!--    <div class="pagination">-->
+<!--      <pagination-controls (pageChange)="onChangePage($event)" class="ngx-pagination"></pagination-controls>-->
+<!--    </div>-->
   </div>
 
   <div class="col-right">
