--- a/src/app/components/product-detail/product-detail.component.scss
+++ b/src/app/components/product-detail/product-detail.component.scss
@@ -6,15 +6,15 @@
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
-  background: #40798C;
+  background: $containerBg;
   padding: 10px 20px;
-  -webkit-box-shadow: 0 2px 10px -2px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0 2px 10px -2px rgba(0,0,0,0.75);
-  box-shadow: 0 2px 10px -2px rgba(0,0,0,0.75);
+  -webkit-box-shadow: $box-shadow;
+  -moz-box-shadow: $box-shadow;
+  box-shadow: $box-shadow;
 
   h3{
     font-size: 24px;
-    color: #ffffff;
+    color: $whiteColor;
     text-align: center;
     margin-bottom: 1rem;
   }
