--- a/src/app/components/products-list/products-list.component.scss
+++ b/src/app/components/products-list/products-list.component.scss
@@ -21,12 +21,12 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: space-between;
-      background: #40798C;
+      background: $containerBg;
       padding: 5px 10px;
       margin-bottom: 2rem;
-      -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
-      box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
+      -webkit-box-shadow: $box-shadow;
+      -moz-box-shadow: $box-shadow;
+      box-shadow: $box-shadow;
       .actions{
         @media (max-width: 768px) {
           width: 100%;
@@ -79,9 +79,9 @@
       margin-bottom: 0.3rem;
       cursor: pointer;
       padding-right: 1rem;
-      -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
-      box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75);
+      -webkit-box-shadow: $box-shadow;
+      -moz-box-shadow: $box-shadow;
+      box-shadow: $box-shadow;
       position: relative;
       border-radius: 5px;
 
@@ -135,15 +135,18 @@
 
       &.selected {
         background: $listBackground;
+        button.delete-btn{
+          background: transparent !important;
+        }
         .mat-icon{
-          color: #fff !important;
+          color: $whiteColor !important;
           width: 0;
-          background: transparent;
+          background: transparent !important;
           box-shadow: none;
           border:0
         }
         span {
-          color: #fff !important;
+          color: $whiteColor !important;
         }
       }
 
