--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,4 +1,5 @@
 $bodyColor: #9da7b4;
 $listBackground:#0B3948;
 $whiteColor: #fff;
-
+$containerBg: #40798C;
+$box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.75)
