--- a/src/app/components/product-detail/product-detail.component.scss
+++ b/src/app/components/product-detail/product-detail.component.scss
@@ -1,31 +1,40 @@
 @import "../../../assets/styles/colors";
+.container{
+  //margin-left: 3rem;
+  @media (max-width: 1200px) {
+    //margin-top: 7rem;
+    //margin-left: 3rem;
 
-.product-details{
-  display: flex;
-  flex-direction: column;
-  max-width: 600px;
-  width: 100%;
-  margin: 0 auto;
-  background: $containerBg;
-  padding: 10px 20px;
-  -webkit-box-shadow: $box-shadow;
-  -moz-box-shadow: $box-shadow;
-  box-shadow: $box-shadow;
-
-  h3{
-    font-size: 24px;
-    color: $whiteColor;
-    text-align: center;
-    margin-bottom: 1rem;
   }
-  img.product-img{
-    max-width: 300px;
-    height: auto;
-    min-height: 300px;
+  .product-details{
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    width: 100%;
+    //margin: 0 auto;
+    background: $containerBg;
+    padding: 10px 20px;
+    -webkit-box-shadow: $box-shadow;
+    -moz-box-shadow: $box-shadow;
+    box-shadow: $box-shadow;
+
+    h3{
+      font-size: 24px;
+      color: $whiteColor;
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+    img.product-img{
+      max-width: 230px;
+      height: auto;
+      min-height: 230px;
+
+    }
+  }
+  .actions{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
   }
 }
-.actions{
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
+
