--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -75,6 +75,8 @@
         </div>
       </ng-template>
     </div>
+
+<!--    Adding paginator but it disable selected item (ngClass) -->
 <!--    <div class="pagination">-->
 <!--      <pagination-controls (pageChange)="onChangePage($event)" class="ngx-pagination"></pagination-controls>-->
 <!--    </div>-->
