--- a/src/app/components/products-list/products-list.component.scss
+++ b/src/app/components/products-list/products-list.component.scss
@@ -78,6 +78,23 @@
 
     max-height: 571px;
     overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+    &::-webkit-scrollbar-track {
+      background-color: $bodyColor;
+      border-radius: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: $listBackground ;
+      outline: 1px solid $listBackground ;
+      border-radius: 10px;
+    }
+
+
+
+
     li.products-list {
       display: flex;
       align-items: center;
@@ -206,3 +223,4 @@
 ::ng-deep.ngx-pagination .current {
   background: $listBackground !important;
 }
+
